# advent-of-code-2024

./: Cargo.toml  README.md
.github/workflows/: check-build.yml  rust-docs.yml
pubs/: .eleventy.js  index.md  package-lock.json  package.json
pubs/_data/: eleventyComputed.js
pubs/_includes/: layout.njk
pubs/_includes/stylesheets/: _settings.scss  root.scss
pubs/_lib/: highlight.js
pubs/assets/styles/: highlight.css
pubs/blog/: day_1.md  day_10.md  day_11.md  day_12.md  day_13.md  day_14.md  day_15.md  day_16.md  day_17.md  day_18.md  day_19.md  day_2.md  day_20.md  day_21.md  day_22.md  day_23.md  day_24.md  day_3.md  day_4.md  day_5.md  day_6.md  day_7.md  day_8.md  day_9.md
src/: day_1.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_2.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  main.rs
src/bootstrap_day/: mod.rs
src/helpers/: mod.rs
