[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { version = "0.13.0", features = [] }
text_io = "0.1.12"
error-chain = { version = "0.12.4", features = [] }
reqwest = { version = "0.12.9", features = ["blocking", "cookies"] }
cookie = "0.18.1"
url = "2.5.4"
regex = "1.11.1"
num = "0.4.3"
time = "0.3.36"
