[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { version = "0.13.0", features = [] }
text_io = "0.1.12"
error-chain = { version = "0.12.4", features = [] }
reqwest = { version = "0.12.9", features = ["blocking", "cookies"] }
regex = "1.11.1"
scraper = "0.22.0"
rayon = "1.10.0"
cached = "0.54.0"
